<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_LcFaultWord2" Id="{7ba67865-3274-4c72-add6-4a548e76ba8e}">
    <Declaration><![CDATA[TYPE ST_LcFaultWord2 :
STRUCT
	Bit00_PibSupply 				: BOOL;
	Bit01_MeasurementConnectorLoop	: BOOL;
	Bit02_FaultLoop 				: BOOL;
	Bit03_AmplifierConnector 		: BOOL;
	Bit04_TermSupply 				: BOOL;
	Bit05_Overcurrent 				: BOOL;
	Bit06_ShortCircuit 				: BOOL;
	Bit07_DcConnection				: BOOL;
	Bit08_ThHSMax					: BOOL;
	Bit09_ShortCircuit24V			: BOOL;
	Bit10_FieldBus					: BOOL;
	Bit11_FLinkRxMc					: BOOL;
	Bit12_EarthFault				: BOOL;
	Bit13_UdcMin					: BOOL;
	Bit14_uu						: BOOL;
	Bit15_ExtFault					: BOOL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>