<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_McFaultWord4" Id="{f892ce1c-adfa-4805-a774-878547c5a2b0}">
    <Declaration><![CDATA[TYPE ST_McFaultWord4 :
STRUCT
	Bit00_NTC 						: BOOL;
	Bit01_ThHsMin					: BOOL;
	Bit02_uu			 			: BOOL;
	Bit03_ControllerCabinetFan 		: BOOL;
	Bit04_ConverterCubiceOvertemp 	: BOOL;
	Bit05_CubicleAuxSupply 			: BOOL;
	Bit06_MotorTemp					: BOOL;
	Bit07_uu						: BOOL;
	Bit08_FrequLock					: BOOL;
	Bit09_ConverterOverload			: BOOL;
	Bit10_uu						: BOOL;
	Bit11_uu						: BOOL;
	Bit12_uu						: BOOL;
	Bit13_uu						: BOOL;
	Bit14_uu						: BOOL;
	Bit15_uu						: BOOL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>